--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,12 +2,15 @@ sonar.projectKey=OlegO005_testSonarCloud
 sonar.organization=olego005
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=testSonarCloud
-#sonar.projectVersion=1.0
-
+sonar.projectName=mobile
+sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
+sonar.exclusions=**/ios/**/*,**/android/**/*,**/*.java
+sonar.javascript.file.suffixes=.js,.jsx
+sonar.typescript.file.suffixes=.ts,.tsx
+sonar.language=js,jsx,ts,tsx
