--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,23 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
+      - name: Cache node_modules
+        id: yarn-cache # use this to check for `cache-hit` in the next step
+        uses: actions/cache@v3
+        with:
+          path: ./node_modules
+          key: mobile-node-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            mobile-node-
+      
+      - name: Install packages
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn
+
+      - name: Test and coverage
+        run: yarn test:coverage
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
