--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,4 +13,6 @@ sonar.sourceEncoding=UTF-8
 sonar.exclusions=**/ios/**/*,**/android/**/*,**/*.java
 sonar.javascript.file.suffixes=.js,.jsx
 sonar.typescript.file.suffixes=.ts,.tsx
-sonar.language=js,jsx,ts,tsx
+
+# Coverage analysis path
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
